--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
     "@ionic/app-scripts": "2.1.3",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "WeddingAssistApp"
 }
