--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
         "ionic-angular": "3.6.0",
         "ionicons": "3.0.0",
         "ng2-date-countdown": "0.0.4",
@@ -40,6 +41,9 @@
     "cordova": {
         "platforms": [
             "android"
-        ]
+        ],
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        }
     }
 }
